# learnopengl

./: CMakeLists.txt  conanfile.txt
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
include/: CameraManager.hpp  Mesh.hpp  Model.hpp  ShadersManager.hpp  Texture.hpp  TextureManager.hpp  UtilsFwd.hpp  Vertices.hpp
libs/stb/: CMakeLists.txt
src/: CameraManager.cpp  Mesh.cpp  Model.cpp  ShadersManager.cpp  Texture.cpp  TextureManager.cpp  Vertices.cpp  main.cpp
src/old_lessons/: getting_started.cpp  lighting.cpp
src/shaders/: fragment.fs  lightFragment.fs  model_loading.fs  vertex.vs
